# auto-palette-web

./: .commitlintrc.yml  .gitignore  .markdownlint.yml  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
src/app/: globals.css  layout.tsx  page.tsx
src/components/buttons/: copy-button.tsx  index.ts  theme-button.tsx
src/components/card/: card.tsx  content.tsx  header.tsx  index.ts  title.tsx
src/components/code/: code-block.tsx  code.tsx  index.ts  syntax-highlight.tsx
src/components/icons/: check.tsx  code.tsx  cog.tsx  copy.tsx  github.tsx  index.ts  laptop.tsx  moon.tsx  palette.tsx  pipette.tsx  sun.tsx  swatch.tsx  types.ts  wand.tsx
src/components/image/: bitmap-image.tsx  index.ts
src/components/layouts/: footer.tsx  header.tsx
src/components/navigation/: anchor.tsx  button-link.tsx  index.ts
src/components/swatch/: index.ts  marker.tsx  swatch-content.tsx  swatch-marker.tsx
src/components/typography/: heading.tsx  text.tsx
src/components/ui/: button.tsx  dropdown-menu.tsx  index.ts  (+1 more)
src/hooks/: index.ts  use-bitmap.ts  use-copy.ts  use-element-size.ts  use-palette.ts
src/layouts/: demo.tsx
src/providers/: index.tsx  shiki-provider.tsx  theme-provider.tsx  wasm-provider.tsx
src/utils/: index.ts  logger.ts  ui.ts
test/app/: page.test.tsx
test/hooks/: use-copy.test.ts
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs  palette.rs  position.rs  swatch.rs
(+3 files in other folders)
